# arc-browser-mcp

./: .gitignore  .mcpbignore  LICENSE  README.md  fastmcp.json  manifest.json  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: manual-verification.md
src/arc_browser_mcp/: arc.py  cli.py  errors.py  handlers.py  history_store.py  index.py  models.py  osascript.py  server.py  state_store.py  tools.py  url_utils.py
tests/: test_arc_adapter_mutations.py  test_arc_adapter_readonly.py  test_cli.py  test_handlers_mutations.py  test_handlers_readonly.py  test_history_store.py  test_index_analysis.py  test_index_query.py  test_models.py  test_opt_in_tools.py  test_osascript.py  test_packaging_metadata.py  test_server_bootstrap.py  test_state_store.py  test_tools_registration.py  test_url_utils.py
